poe calc in progress

--- a/index.html
+++ b/index.html
@@ -6,8 +6,33 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Farm Calculator</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <header class="header">
+        <div class="header__inner container">
+            <div class="header__logo">
+                <a href="/" class="header__logo-link">7808</a>
+            </div>
+            <nav class="header__menu">
+                <ul class="header__menu-list">
+                    <li class="header__menu-item">
+                        <a href="" class="header__menu-link">Home</a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a href="" class="header__menu-link">League</a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a href="" class="header__menu-link">Items</a>
+                    </li>
+                    <li class="header__menu-item">
+                        <a href="" class="header__menu-link">faq</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
+    <main class="container"></main>
 </body>
 </html>
