expedition section ready

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <nav class="header__menu">
                 <ul class="header__menu-list">
                     <li class="header__menu-item">
-                        <a href="" class="header__menu-link">Home</a>
+                        <a href="" class="header__menu-link">Фарм</a>
                     </li>
                     <li class="header__menu-item">
-                        <a href="" class="header__menu-link">League</a>
+                        <a href="" class="header__menu-link">Шмот</a>
                     </li>
                     <li class="header__menu-item">
-                        <a href="" class="header__menu-link">Items</a>
+                        <a href="" class="header__menu-link">Прогресс</a>
                     </li>
                     <li class="header__menu-item">
                         <a href="" class="header__menu-link">faq</a>
@@ -33,6 +33,93 @@
         </div>
     </header>
 
-    <main class="container"></main>
+    <main class="main">
+        <section class="section container">
+            <div class="section__header">
+                <h3 class="section__title violet-bg">
+                    Экспедиция
+                </h3>
+                <div class="section__description">
+                    <p>
+                        Фарм журналов экспедиции / Проходка самих журналов / Крутка валюты
+                    </p>
+                </div>
+            </div>
+            <div class="section__body">
+                <div class="expedition">
+                    <ul class="expedition__list">
+                        <li class="expedition__item">
+                            <h3 class="expedition__title">ilvl 50-65</h3>
+                            <div class="expedition__description">
+                                <p>
+                                    <img src="./images/logbook.png" height="47" width="47" alt="" class="expedition__image">
+                                    Журнал экспедиции
+                                </p>
+                            </div>
+                            <button class="button expedition__button">
+                                Купить
+                            </button>
+                        </li>
+                        <li class="expedition__item">
+                            <h3 class="expedition__title">ilvl 66-71</h3>
+                            <div class="expedition__description">
+                                <p>
+                                    <img src="./images/logbook.png" height="47" width="47" alt="" class="expedition__image">
+                                    Журнал экспедиции
+                                </p>
+                            </div>
+                            <button class="button expedition__button">
+                                Купить
+                            </button>
+                        </li>
+                        <li class="expedition__item">
+                            <h3 class="expedition__title">ilvl 72-78</h3>
+                            <div class="expedition__description">
+                                <p>
+                                    <img src="./images/logbook.png" height="47" width="47" alt="" class="expedition__image">
+                                    Журнал экспедиции
+                                </p>
+                            </div>
+                            <button class="button expedition__button">
+                                Купить
+                            </button>
+                        </li>
+                        <li class="expedition__item">
+                            <h3 class="expedition__title content__lvl-orange">ilvl 79-81</h3>
+                            <div class="expedition__description">
+                                <p>
+                                    <img src="./images/logbook.png" height="47" width="47" alt="" class="expedition__image">
+                                    Журнал экспедиции
+                                </p>
+                            </div>
+                            <button class="button expedition__button">
+                                Купить
+                            </button>
+                        </li>
+                        <li class="expedition__item">
+                            <h3 class="expedition__title content__lvl-green">ilvl 81-83</h3>
+                            <div class="expedition__description">
+                                <p>
+                                    <img src="./images/logbook.png" height="47" width="47" alt="" class="expedition__image">
+                                    Журнал экспедиции
+                                </p>
+                            </div>
+                            <button class="button expedition__button">
+                                Купить
+                            </button>
+                        </li>
+                    </ul>
+                    <div class="currency">
+                        <div class="currency__expedition">
+                            <span>
+                                <img src="./images/exotic.png" height="47" width="47" alt="" class="currency__expedition-image">
+                                Диковинные монеты
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
