Blight section is done

--- a/index.html
+++ b/index.html
@@ -44,9 +44,17 @@
                         Фарм журналов экспедиции / Проходка самих журналов / Крутка валюты
                     </p>
                 </div>
+
             </div>
             <div class="section__body">
                 <div class="expedition">
+                    <div class="expedition__note">
+                        <p>
+                            Фарм журналов экспедиции <span class="notification">Черная коса</span> / <span class="notification">Орден солнца</span> <br/>
+                            Фарм журналов на картах - <span class="notification">Туджин</span> / <span class="notification">Дэнинг</span> <br/>
+                            Атлас под фарм : <a href="/">Ссылка</a>
+                        </p>
+                    </div>
                     <ul class="expedition__list">
                         <li class="expedition__item">
                             <h3 class="expedition__title">ilvl 50-65</h3>
@@ -97,7 +105,7 @@
                             </button>
                         </li>
                         <li class="expedition__item">
-                            <h3 class="expedition__title content__lvl-green">ilvl 81-83</h3>
+                            <h3 class="expedition__title content__lvl-red">ilvl 81-83</h3>
                             <div class="expedition__description">
                                 <p>
                                     <img src="./images/logbook.png" height="47" width="47" alt="" class="expedition__image">
@@ -109,15 +117,162 @@
                             </button>
                         </li>
                     </ul>
-                    <div class="currency">
-                        <div class="currency__expedition">
-                            <span>
-                                <img src="./images/exotic.png" height="47" width="47" alt="" class="currency__expedition-image">
-                                Диковинные монеты
-                            </span>
-                        </div>
+
+                </div>
+            </div>
+        </section>
+        <section class="section container">
+            <div class="section__header">
+                <h3 class="section__title violet-bg">
+                    Зараженные карты
+                </h3>
+                <div class="section__description">
+                    <p>
+                        Зараженные карты / Разоренные карты / Фарм проходок-масел
+                    </p>
+                </div>
+            </div>
+            <div class="section__body">
+                <div class="blight">
+                    <div class="blight__note">
+                        <p>
+                            Уровень зараженных карт зависит от уровня карты, после получения первых 20-30 хаосов и
+                            нескольких янтарных масел + намазки на кольца необходимо переходить на т13+ карты.
+                        </p>
+                    </div>
+                    <ul class="blight__list-oil">
+                        <li class="blight__item">
+                            <div class="blight__ilvl">
+                                <p>Кольца</p>
+                            </div>
+                            Начальная
+                            <div class="blight__oils">
+                                <img src="./images/AmberOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/AmberOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                            </div>
+                            <div class="blight__oils">
+                                <img src="./images/TealOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/VioletOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                            </div>
+                        </li>
+                        <li class="blight__item">
+                            <div class="blight__ilvl">
+                                <p>Кольца</p>
+                            </div>
+                            Финальная
+                            <div class="blight__oils">
+                                <img src="./images/IndigoOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/VioletOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                            </div>
+                            <div class="blight__oils">
+                                <img src="./images/SilverOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/OpalescentOil.png" width="47" height="47" alt="" class="blight__oils-image">
+
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="blight__list">
+                        <li class="blight__item">
+                            <div class="blight__ilvl">
+                                <p>1-5</p>
+                            </div>
+                            <div class="blight__title">
+                                <img src="./images/map_white.png" height="47" width="47" alt="" class="blight__image">
+                                <h4>Зараженная карта</h4>
+                            </div>
+                            <button class="button blight__button">
+                                Купить
+                            </button>
+                        </li>
+                        <li class="blight__item">
+                            <div class="blight__ilvl">
+                                <p>6-12</p>
+                            </div>
+                            <div class="blight__title">
+                                <img src="./images/map_yellow.png" height="47" width="47" alt="" class="blight__image">
+                                <h4>Зараженная карта</h4>
+                            </div>
+                            <button class="button blight__button">
+                                Купить
+                            </button>
+                        </li>
+                        <li class="blight__item">
+                            <div class="blight__ilvl content__lvl-orange">
+                                <p>13-16</p>
+                            </div>
+                            <div class="blight__title">
+                                <img src="./images/map_red.png" height="47" width="47" alt="" class="blight__image">
+                                <h4>Зараженная карта</h4>
+                            </div>
+                            <button class="button blight__button">
+                                Купить
+                            </button>
+                        </li>
+                        <li class="blight__item">
+                            <div class="blight__ilvl content__lvl-orange">
+                                <p>17+</p>
+                            </div>
+                            <div class="blight__title">
+                                <img src="./images/map_ravaged.png" height="47" width="47" alt="" class="blight__image">
+                                <h4>Разоренная карта</h4>
+                            </div>
+                            <button class="button blight__button">
+                                Купить
+                            </button>
+                        </li>
+                    </ul>
+                    <ul class="blight__list-oil">
+                        <li class="blight__item">
+                            <div class="blight__ilvl">
+                                <p>1+</p>
+                            </div>
+
+                            <div class="blight__oils">
+                                <img src="./images/AmberOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/AmberOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/AmberOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                            </div>
+                        </li>
+                        <li class="blight__item">
+                            <div class="blight__ilvl">
+                                <p>13+</p>
+                            </div>
+
+                            <div class="blight__oils">
+                                <img src="./images/BlackOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/CrimsonOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/OpalescentOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                            </div>
+                        </li>
+                        <li class="blight__item">
+                            <div class="blight__ilvl content__lvl-orange">
+                                <p>17+</p>
+                            </div>
+
+                            <div class="blight__oils">
+                                <img src="./images/OpalescentOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/OpalescentOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/OpalescentOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                            </div>
+                            <div class="blight__oils">
+                                <img src="./images/AmberOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/CrimsonOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/CrimsonOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                            </div>
+                            <div class="blight__oils">
+                                <img src="./images/SilverOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/SilverOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                                <img src="./images/SilverOil.png" width="47" height="47" alt="" class="blight__oils-image">
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="blight__note">
+                        <p>
+                            Намазка 80+ кол-ва предметов + осквернение после сборки билда, добавить в машину картоходца фрагменты жертвоприношения
+                        </p>
                     </div>
                 </div>
+
             </div>
         </section>
     </main>
