--- a/index.html
+++ b/index.html
@@ -387,12 +387,27 @@
         </div>
         <div class="section__body">
             <div class="equip">
+                <div class="equip__separator">
+                    <h3 >Начальная сборка</h3>
+                </div>
                 <ul class="equip__list">
                     <li class="equip__item">
                         <p class="equip__title">Клык Аракали</p>
                         <img src="./images/equip/weapon.png" height="141" width="47" alt="" class="equip__image">
                         <span class="equip__description">
                             Купить первым слотом
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Раскатистый удар</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Губительное прикосновение</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Град ударов</span>
+                                </span>
+                            </span>
+
                         </span>
                         <a href="https://ru.pathofexile.com/trade/search/Necropolis/wmVyEQTb">
                             <button class="button">Купить</button>
@@ -403,6 +418,17 @@
                         <img src="./images/equip/shield_1.png" height="141" width="94" alt="" class="equip__image">
                         <span class="equip__description">
                             Купить первым слотом
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Путы времени</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Осквернение</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Шквал клинков</span>
+                                </span>
+                            </span>
                         </span>
                         <a href="https://ru.pathofexile.com/trade/search/Necropolis/WDm2LvCm">
                             <button class="button">Купить</button>
@@ -413,6 +439,44 @@
                         <img src="./images/equip/ChuhutlusSkull.png" height="94" width="94" alt="" class="equip__image">
                         <span class="equip__description">
                             Купить первым слотом
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Решимость</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Злорадство</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Спасение от стихий</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Наставник 2+</span>
+                                </span>
+                            </span>
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/XoY3dnJIP">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Бальзамировщик</p>
+                        <img src="./images/equip/Allelopathy.png" height="94" width="94" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Даст выживаемость в больших пачках, много регена
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Шквал клинков</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Ускорение атак</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Огненный рывок</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Жизнеотвод</span>
+                                </span>
+                            </span>
                         </span>
                         <a href="https://ru.pathofexile.com/trade/search/Necropolis/XoY3dnJIP">
                             <button class="button">Купить</button>
@@ -427,6 +491,20 @@
                                 <img src="./images/AmberOil.png" alt="">
                                 <img src="./images/IndigoOil.png" alt="">
                                 <img src="./images/SilverOil.png" alt="">
+                            </span>
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Расплавленный панцирь</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Сбор</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Божественный гнев</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Жизнеотвод</span>
+                                </span>
                             </span>
                         </span>
                         <a href="https://ru.pathofexile.com/trade/search/Necropolis/yadvbpGCR">
@@ -470,8 +548,80 @@
                         <img src="./images/equip/DomeOfBrass.png" height="141" width="94" alt="" class="equip__image">
                         <span class="equip__description">
                             Купить по возможности 3-4%+ резиста, в идеале 5, но дорого, ячейки не важны
+                            <span class="gemslot">
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Вихрь</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-g">
+                                    <span class="gemslot__text">Осквернение</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Сотворение чар при поддержании</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-b">
+                                    <span class="gemslot__text">Подношение плоти</span>
+                                </span>
+                                <span class="gemslot__socket gemslot__socket-r">
+                                    <span class="gemslot__text">Жизнеотвод</span>
+                                </span>
+                            </span>
                         </span>
                         <a href="https://ru.pathofexile.com/trade/search/Necropolis/KQWba36h5">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                </ul>
+                <div class="equip__separator">
+                    <h3 >Флаконы</h3>
+                </div>
+                <ul class="equip__list">
+                    <li class="equip__item">
+                        <p class="equip__title">Сосуд Страданий</p>
+                        <img src="./images/equip/WrithingJar.png" height="94" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Купить первым слотом, вместе с кинжалом
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/Pjzz7UL">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Флакон жизни</p>
+                        <img src="./images/equip/lifeflask11.png" height="94" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Купить/Скрафтить при первой возможности
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/Jd0qeErsl">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Отвар Руми</p>
+                        <img src="./images/equip/BlockFlask.png" height="94" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Купить по возможности +12% +6% +-1~2%
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/amWw7Gace">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Базальтовый флакон</p>
+                        <img src="./images/equip/stone.png" height="94" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Купить сразу
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/QVWZYo7Tw">
+                            <button class="button">Купить</button>
+                        </a>
+                    </li>
+                    <li class="equip__item">
+                        <p class="equip__title">Вкус ненависти</p>
+                        <img src="./images/equip/TasteOfHate.png" height="94" width="47" alt="" class="equip__image">
+                        <span class="equip__description">
+                            Купить по возможности, довольно дорогой первый день
+                        </span>
+                        <a href="https://ru.pathofexile.com/trade/search/Necropolis/DlE5t5">
                             <button class="button">Купить</button>
                         </a>
                     </li>
